fix for points.py access on colab

--- a/points_map.ipynb
+++ b/points_map.ipynb
@@ -20,15 +20,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
    "id": "ffe9251f-3c65-4221-b4d2-2657614b9f91",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-10T13:35:11.141199Z",
-     "start_time": "2025-11-10T13:35:11.007428Z"
+     "end_time": "2025-11-10T13:50:20.951066Z",
+     "start_time": "2025-11-10T13:50:16.368177Z"
     }
    },
-   "outputs": [],
    "source": [
     "# Geospatial library import\n",
     "import geopandas as gpd\n",
@@ -37,27 +35,18 @@
     "# This is the points.py python file where our points are written down\n",
     "# Importing it gives us access to the get_points() function\n",
     "import points"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "dbac411595678dcc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-10T13:35:11.151247Z",
-     "start_time": "2025-11-10T13:35:11.148134Z"
+     "end_time": "2025-11-10T13:50:20.964721Z",
+     "start_time": "2025-11-10T13:50:20.959989Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mapclassify already installed\n"
-     ]
-    }
-   ],
+   "cell_type": "code",
    "source": [
     "# We may also need to install mapclassify to use the gdf.explore() function\n",
     "# This is similar to when we did '!pip install mapclassify' but is slightly better because it checks first if mapclassify is already installed\n",
@@ -70,28 +59,92 @@
     "    subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"mapclassify\"])\n",
     "else:\n",
     "    print(\"mapclassify already installed\")\n"
-   ]
+   ],
+   "id": "b99696a1e949955f",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mapclassify already installed\n"
+     ]
+    }
+   ],
+   "execution_count": 2
   },
   {
-   "cell_type": "markdown",
-   "id": "99ae1e28-6b70-49d6-a5e4-951b9b058d58",
    "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Download the points.py file\n",
+    "\n",
+    "If we are running python locally (i.e. on your own computer) then the following chunk is not necessary because we can automatically access the `points.py` file in the same directory as this notebook.\n",
+    "\n",
+    "However, if we are running this notebook in Google Colab then we need to download the `points.py` file from your GitHub repository first.\n",
+    "\n",
+    "If you are using Google Colab then in the following code, replace `GITHUB_USER` with your own GitHub username. It will then download the `points.py` file from your fork of the class repository into your Colab file space.\n",
+    "\n",
+    "If you are running this notebook locally then you can skip this chunk (it will actually raise and error because it cannot find the `/content` directory)."
+   ],
+   "id": "35ea6bf5b9bb28b"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "# --- Setup: fetch points.py from your fork ---\n",
+    "GITHUB_USER = \"YOUR GITHUB USER NAME\"   # <-- STUDENT: change this once\n",
+    "REPO = \"GEOG5415M-Class_Repository\"\n",
+    "BRANCH = \"main\"\n",
+    "FILE = \"points.py\"\n",
+    "\n",
+    "import os, urllib.request, importlib, sys\n",
+    "\n",
+    "raw_url = f\"https://raw.githubusercontent.com/{GITHUB_USER}/{REPO}/{BRANCH}/{FILE}\"\n",
+    "dst = os.path.join(\"/content\", FILE)\n",
+    "\n",
+    "try:\n",
+    "    urllib.request.urlretrieve(raw_url, dst)\n",
+    "    print(f\"Downloaded {FILE} from {raw_url}\")\n",
+    "except Exception as e:\n",
+    "    raise RuntimeError(f\"Could not fetch {FILE} from {raw_url}. \"\n",
+    "                       f\"Check your username/branch/file path.\\n{e}\")\n",
+    "\n",
+    "# Ensure current dir is on the Python path then import\n",
+    "if \"/content\" not in sys.path:\n",
+    "    sys.path.insert(0, \"/content\")\n",
+    "\n",
+    "import points  # after download, this should work\n",
+    "importlib.reload(points)  # handy if students re-run after edits\n",
+    "print(\"Imported points.py successfully.\")\n"
+   ],
+   "id": "a59c3e8a0a75593e",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "## Get the points\n",
     "\n",
     "Call the function `get_points()` from `points.py` to get a list of points"
-   ]
+   ],
+   "id": "37c5c037667b0f3e"
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "0dc41bef-0eec-4ba5-a06e-5a44e376d35f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-10T13:35:11.174433Z",
-     "start_time": "2025-11-10T13:35:11.170274Z"
+     "end_time": "2025-11-10T13:55:19.466591Z",
+     "start_time": "2025-11-10T13:55:19.460624Z"
     }
    },
+   "cell_type": "code",
+   "source": [
+    "points_list = points.get_points()\n",
+    "points_list"
+   ],
+   "id": "712c2ed4799f07a0",
    "outputs": [
     {
      "data": {
@@ -100,15 +153,12 @@
        " [53.840032, -1.6432286, \"Nick's neighbourhood\"]]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "points_list = points.get_points()\n",
-    "points_list"
-   ]
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -121,197 +171,10 @@
    ]
   },
   {
+   "metadata": {},
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "b6364935-63f0-4238-ac1b-ac027d107d73",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-10T13:35:11.316306Z",
-     "start_time": "2025-11-10T13:35:11.189651Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div style=\"width:100%;\"><div style=\"position:relative;width:100%;height:0;padding-bottom:60%;\"><span style=\"color:#565656\">Make this Notebook Trusted to load map: File -> Trust Notebook</span><iframe srcdoc=\"&lt;!DOCTYPE html&gt;\n",
-       "&lt;html&gt;\n",
-       "&lt;head&gt;\n",
-       "    \n",
-       "    &lt;meta http-equiv=&quot;content-type&quot; content=&quot;text/html; charset=UTF-8&quot; /&gt;\n",
-       "    \n",
-       "        &lt;script&gt;\n",
-       "            L_NO_TOUCH = false;\n",
-       "            L_DISABLE_3D = false;\n",
-       "        &lt;/script&gt;\n",
-       "    \n",
-       "    &lt;style&gt;html, body {width: 100%;height: 100%;margin: 0;padding: 0;}&lt;/style&gt;\n",
-       "    &lt;style&gt;#map {position:absolute;top:0;bottom:0;right:0;left:0;}&lt;/style&gt;\n",
-       "    &lt;script src=&quot;https://cdn.jsdelivr.net/npm/leaflet@1.9.3/dist/leaflet.js&quot;&gt;&lt;/script&gt;\n",
-       "    &lt;script src=&quot;https://code.jquery.com/jquery-1.12.4.min.js&quot;&gt;&lt;/script&gt;\n",
-       "    &lt;script src=&quot;https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js&quot;&gt;&lt;/script&gt;\n",
-       "    &lt;script src=&quot;https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.js&quot;&gt;&lt;/script&gt;\n",
-       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/leaflet@1.9.3/dist/leaflet.css&quot;/&gt;\n",
-       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css&quot;/&gt;\n",
-       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css&quot;/&gt;\n",
-       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.0/css/all.min.css&quot;/&gt;\n",
-       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.css&quot;/&gt;\n",
-       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/gh/python-visualization/folium/folium/templates/leaflet.awesome.rotate.min.css&quot;/&gt;\n",
-       "    \n",
-       "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
-       "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
-       "            &lt;style&gt;\n",
-       "                #map_d549ebe65cb8d9082c1f348b68f685d8 {\n",
-       "                    position: relative;\n",
-       "                    width: 100.0%;\n",
-       "                    height: 100.0%;\n",
-       "                    left: 0.0%;\n",
-       "                    top: 0.0%;\n",
-       "                }\n",
-       "                .leaflet-container { font-size: 1rem; }\n",
-       "            &lt;/style&gt;\n",
-       "        \n",
-       "    \n",
-       "                    &lt;style&gt;\n",
-       "                        .foliumtooltip {\n",
-       "                            \n",
-       "                        }\n",
-       "                       .foliumtooltip table{\n",
-       "                            margin: auto;\n",
-       "                        }\n",
-       "                        .foliumtooltip tr{\n",
-       "                            text-align: left;\n",
-       "                        }\n",
-       "                        .foliumtooltip th{\n",
-       "                            padding: 2px; padding-right: 8px;\n",
-       "                        }\n",
-       "                    &lt;/style&gt;\n",
-       "            \n",
-       "&lt;/head&gt;\n",
-       "&lt;body&gt;\n",
-       "    \n",
-       "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_d549ebe65cb8d9082c1f348b68f685d8&quot; &gt;&lt;/div&gt;\n",
-       "        \n",
-       "&lt;/body&gt;\n",
-       "&lt;script&gt;\n",
-       "    \n",
-       "    \n",
-       "            var map_d549ebe65cb8d9082c1f348b68f685d8 = L.map(\n",
-       "                &quot;map_d549ebe65cb8d9082c1f348b68f685d8&quot;,\n",
-       "                {\n",
-       "                    center: [53.824255, -1.5980105],\n",
-       "                    crs: L.CRS.EPSG3857,\n",
-       "                    zoom: 10,\n",
-       "                    zoomControl: true,\n",
-       "                    preferCanvas: false,\n",
-       "                }\n",
-       "            );\n",
-       "            L.control.scale().addTo(map_d549ebe65cb8d9082c1f348b68f685d8);\n",
-       "\n",
-       "            \n",
-       "\n",
-       "        \n",
-       "    \n",
-       "            var tile_layer_59fbcce15bbaccdd7dd6cfa7a8202341 = L.tileLayer(\n",
-       "                &quot;https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
-       "                {&quot;attribution&quot;: &quot;Data by \\u0026copy; \\u003ca target=\\&quot;_blank\\&quot; href=\\&quot;http://openstreetmap.org\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e, under \\u003ca target=\\&quot;_blank\\&quot; href=\\&quot;http://www.openstreetmap.org/copyright\\&quot;\\u003eODbL\\u003c/a\\u003e.&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            ).addTo(map_d549ebe65cb8d9082c1f348b68f685d8);\n",
-       "        \n",
-       "    \n",
-       "            map_d549ebe65cb8d9082c1f348b68f685d8.fitBounds(\n",
-       "                [[53.808478, -1.6432286], [53.840032, -1.5527924]],\n",
-       "                {}\n",
-       "            );\n",
-       "        \n",
-       "    \n",
-       "        function geo_json_a67cb4e305dffebe025dfe3d89f557fb_styler(feature) {\n",
-       "            switch(feature.id) {\n",
-       "                default:\n",
-       "                    return {&quot;fillOpacity&quot;: 0.5, &quot;radius&quot;: 8, &quot;weight&quot;: 2};\n",
-       "            }\n",
-       "        }\n",
-       "        function geo_json_a67cb4e305dffebe025dfe3d89f557fb_highlighter(feature) {\n",
-       "            switch(feature.id) {\n",
-       "                default:\n",
-       "                    return {&quot;fillOpacity&quot;: 0.75};\n",
-       "            }\n",
-       "        }\n",
-       "        function geo_json_a67cb4e305dffebe025dfe3d89f557fb_pointToLayer(feature, latlng) {\n",
-       "            var opts = {&quot;bubblingMouseEvents&quot;: true, &quot;color&quot;: &quot;#3388ff&quot;, &quot;dashArray&quot;: null, &quot;dashOffset&quot;: null, &quot;fill&quot;: true, &quot;fillColor&quot;: &quot;#3388ff&quot;, &quot;fillOpacity&quot;: 0.2, &quot;fillRule&quot;: &quot;evenodd&quot;, &quot;lineCap&quot;: &quot;round&quot;, &quot;lineJoin&quot;: &quot;round&quot;, &quot;opacity&quot;: 1.0, &quot;radius&quot;: 2, &quot;stroke&quot;: true, &quot;weight&quot;: 3};\n",
-       "            \n",
-       "            let style = geo_json_a67cb4e305dffebe025dfe3d89f557fb_styler(feature)\n",
-       "            Object.assign(opts, style)\n",
-       "            \n",
-       "            return new L.CircleMarker(latlng, opts)\n",
-       "        }\n",
-       "\n",
-       "        function geo_json_a67cb4e305dffebe025dfe3d89f557fb_onEachFeature(feature, layer) {\n",
-       "            layer.on({\n",
-       "                mouseout: function(e) {\n",
-       "                    if(typeof e.target.setStyle === &quot;function&quot;){\n",
-       "                        geo_json_a67cb4e305dffebe025dfe3d89f557fb.resetStyle(e.target);\n",
-       "                    }\n",
-       "                },\n",
-       "                mouseover: function(e) {\n",
-       "                    if(typeof e.target.setStyle === &quot;function&quot;){\n",
-       "                        const highlightStyle = geo_json_a67cb4e305dffebe025dfe3d89f557fb_highlighter(e.target.feature)\n",
-       "                        e.target.setStyle(highlightStyle);\n",
-       "                    }\n",
-       "                },\n",
-       "            });\n",
-       "        };\n",
-       "        var geo_json_a67cb4e305dffebe025dfe3d89f557fb = L.geoJson(null, {\n",
-       "                onEachFeature: geo_json_a67cb4e305dffebe025dfe3d89f557fb_onEachFeature,\n",
-       "            \n",
-       "                style: geo_json_a67cb4e305dffebe025dfe3d89f557fb_styler,\n",
-       "                pointToLayer: geo_json_a67cb4e305dffebe025dfe3d89f557fb_pointToLayer\n",
-       "        });\n",
-       "\n",
-       "        function geo_json_a67cb4e305dffebe025dfe3d89f557fb_add (data) {\n",
-       "            geo_json_a67cb4e305dffebe025dfe3d89f557fb\n",
-       "                .addData(data)\n",
-       "                .addTo(map_d549ebe65cb8d9082c1f348b68f685d8);\n",
-       "        }\n",
-       "            geo_json_a67cb4e305dffebe025dfe3d89f557fb_add({&quot;bbox&quot;: [-1.6432286, 53.808478, -1.5527924, 53.840032], &quot;features&quot;: [{&quot;bbox&quot;: [-1.5527924, 53.808478, -1.5527924, 53.808478], &quot;geometry&quot;: {&quot;coordinates&quot;: [-1.5527924, 53.808478], &quot;type&quot;: &quot;Point&quot;}, &quot;id&quot;: &quot;0&quot;, &quot;properties&quot;: {&quot;latitude&quot;: 53.808478, &quot;longitude&quot;: -1.5527924, &quot;name&quot;: &quot;University of Leeds&quot;}, &quot;type&quot;: &quot;Feature&quot;}, {&quot;bbox&quot;: [-1.6432286, 53.840032, -1.6432286, 53.840032], &quot;geometry&quot;: {&quot;coordinates&quot;: [-1.6432286, 53.840032], &quot;type&quot;: &quot;Point&quot;}, &quot;id&quot;: &quot;1&quot;, &quot;properties&quot;: {&quot;latitude&quot;: 53.840032, &quot;longitude&quot;: -1.6432286, &quot;name&quot;: &quot;Nick\\u0027s neighbourhood&quot;}, &quot;type&quot;: &quot;Feature&quot;}], &quot;type&quot;: &quot;FeatureCollection&quot;});\n",
-       "\n",
-       "        \n",
-       "    \n",
-       "    geo_json_a67cb4e305dffebe025dfe3d89f557fb.bindTooltip(\n",
-       "    function(layer){\n",
-       "    let div = L.DomUtil.create(&#x27;div&#x27;);\n",
-       "    \n",
-       "    let handleObject = feature=&gt;typeof(feature)==&#x27;object&#x27; ? JSON.stringify(feature) : feature;\n",
-       "    let fields = [&quot;name&quot;];\n",
-       "    let aliases = [&quot;name&quot;];\n",
-       "    let table = &#x27;&lt;table&gt;&#x27; +\n",
-       "        String(\n",
-       "        fields.map(\n",
-       "        (v,i)=&gt;\n",
-       "        `&lt;tr&gt;\n",
-       "            &lt;th&gt;${aliases[i]}&lt;/th&gt;\n",
-       "            \n",
-       "            &lt;td&gt;${handleObject(layer.feature.properties[v])}&lt;/td&gt;\n",
-       "        &lt;/tr&gt;`).join(&#x27;&#x27;))\n",
-       "    +&#x27;&lt;/table&gt;&#x27;;\n",
-       "    div.innerHTML=table;\n",
-       "    \n",
-       "    return div\n",
-       "    }\n",
-       "    ,{&quot;className&quot;: &quot;foliumtooltip&quot;, &quot;sticky&quot;: true});\n",
-       "                     \n",
-       "&lt;/script&gt;\n",
-       "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
-      ],
-      "text/plain": [
-       "<folium.folium.Map at 0x17a41c0d0>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "# Create a GeoDataFrame from the points list\n",
     "gdf = gpd.GeoDataFrame(\n",
@@ -326,7 +189,16 @@
     "    tooltip=\"name\",  # Show the 'name' attribute when hovering over a point\n",
     "    style_kwds={\"radius\": 8}  # Set the marker size using the 'radius' key\n",
     ")"
-   ]
+   ],
+   "id": "7e6997aa8f9db4a7"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "8d73c8fbb17fd87d"
   }
  ],
  "metadata": {
