fixed contextily import

--- a/points_map.ipynb
+++ b/points_map.ipynb
@@ -31,7 +31,7 @@
     "import geopandas as gpd\n",
     "from shapely.geometry import Point\n",
     "import matplotlib.pyplot as plt\n",
-    "import contextily as ctx\n",
+    "\n",
     "\n",
     "# This is the points.py python file where our points are written down\n",
     "# Importing it gives us access to the get_points() function\n",
@@ -48,11 +48,12 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "# We may also need to install mapclassify to use the gdf.explore() function\n",
-    "# and contextily for basemaps\n",
+    "# We may also need to install mapclassify to use the gdf.explore() function and contextily for basemaps\n",
     "\n",
     "!pip install contextily\n",
-    "!pip install mapclassify"
+    "!pip install mapclassify\n",
+    "\n",
+    "import contextily as ctx"
    ],
    "id": "bb818028ca10e1e3",
    "outputs": [],
